--- a/src/locales/ua/token.json
+++ b/src/locales/ua/token.json
@@ -1,67 +1,67 @@
 {
   "token": {
     "siteMetadata": {
-      "title": "Токен",
-      "description": "Учасники наших тестнетів тепер зможуть заробляти тестові токени мережі Joystream (tJOY), що підтримуються фіатною валютою."
+      "title": "Token",
+      "description": "Participants on our testnets can now earn Joystream Testnet Tokens (tJOYs) backed by fiat currency."
     },
     "hero": {
-      "title": "Поняття токена tJOY",
-      "text": "Учасники наших тестнетів тепер зможуть заробляти тестові токени мережі Joystream (tJOY), що підтримуються фіатною валютою.",
+      "title": "Understanding the tJOY token",
+      "text": "Participants on our testnets can now earn Joystream Testnet Tokens (tJOYs) backed by fiat currency.",
       "tokenStats": {
-        "title": "Токени в цифрах",
-        "exchangeRate": "Обмінний курс",
-        "backingValue": "Сума забезпечення",
-        "supply": "Забезпечення"
+        "title": "Token in numbers",
+        "exchangeRate": "Exchange Rate",
+        "backingValue": "Backing Value",
+        "supply": "Supply"
       }
     },
     "faq": {
-      "title": "Інформація про токени тестнету",
+      "title": "Testnet Token Information",
       "whatIsTJoy": {
-        "title": "Що таке tJOY?",
-        "text": "tJOY (testJOY) валюта, яка використовується для заохочення в тестнетах Joystream."
+        "title": "What is tJOY?",
+        "text": "tJOY (testJOY) is the currency used on Joystream incentivized testnets."
       },
       "tJoyValueOrigin": {
-        "title": "Чем забезпечені tJOY?",
-        "text": "Команда Jsgenesis, що стоїть за проектом Joystream, пов'язала загальну кількість tJOY з відповідним пулом фіатної валюти (USD), що належить компанії. Всі учасники тестової мережі можуть обміняти свої tJOY на долари в будь-який час."
+        "title": "Where does the value of tJOY come from?",
+        "text": "Jsgenesis, the team behind the Joystream project, have linked the total supply of tJOYs to a corresponding pool of fiat currency (USD) held by the company. All testnet participants can redeem their tJOY for USD at any time."
       },
       "purposeOfTJoy": {
-        "title": "Яка мета tJOY?",
-        "text": "tJOY можна використовувати в наших тестнетах так само, як майбутні користувачі платформи Joystream зможуть використовувати токен JOY в основній мережі. Три основні функції tJOY - це стейкінг, управління і оплата. <0/> <0/> Наприклад, для участі в ролях тестнету користувачам може знадобитися стейкінг (stake) tJOY. Для створення пропозицій з управління і голосування за членів Ради також потрібно мати tJOY. Нарешті, для виконання грантів і KPI tJOY використовуються для виплати членам, які вносять активний внесок."
+        "title": "What is the purpose of tJOY?",
+        "text": "tJOY can be used on our testnets in the same ways that future users of the Joystream platform will be able to use the mainnet JOY token. The three principal functions of tJOY are in staking, governance and for payment.<0/><0/> For example, to participate in testnet roles, users may need to stake tJOY. To create governance proposals and vote for Council Members, tJOY is also required. Finally, on the testnet, bounties and KPIs require tJOYs for paying effective contributors."
       },
       "whereCanTJoyBeObtained": {
-        "title": "Як можна отримати tJOY?",
-        "text": "Є багато можливостей отримати tJOY. Менші суми можна запросити на наших каналах спільноти (включаючи наш сервер Discord і форум), а великі суми можна накопичити, беручи участь в грантах, конкурсах та інших заходах."
+        "title": "Where can I get tJOY?",
+        "text": "There are many opportunities to obtain tJOY. Smaller amounts can be requested in our community channels (including our Discord server and on-chain forum), while larger sums can be accumulated by participating in bounties, competitions and other events."
       },
       "linkBetweenTJoyAndFutureToken": {
-        "title": "Чи існує зв'язок між tJOY і майбутніми токенами основної мережі?",
-        "text": "Немає прямого зв'язку між tJOY і JOY. Ми використовуємо tJOY для моделювання реальних економічних стимулів, присутніх в основній мережі, щоб сприяти розвитку платформи та сприяти зростанню співтовариства разом з його навчанням при підготовці переходу від тестнету до реальної роботи."
+        "title": "Is there any link between tJOY and the future mainnet token?",
+        "text": "There is no direct link between tJOY and mainnet JOY. We are using tJOY to simulate the real economic incentives present on mainnet to aid the platform's development and facilitate the growth and education of our community in preparation of the transition from testnet to mainnet."
       },
       "howToCashout": {
-        "title": "Як перевести в готівку tJOY в USD?",
-        "text": "Ми використовуємо Bitcoin Cash (BCH) як засіб оплати в наших тестнетах. Ви можете отримати tJOY, зробивши переказ за адресою: <0> 5D5PhZQNJzcJXVBxwJxZcsutjKPqUPydrvpu6HeiBfMaeKQu </0> Перед тим як це зробити, ви повинні встановити <0>memo</0> ключа, з якого здійснюється переказ на Вашу електронну адресу BCH. Ми фіксуємо курс BCH/USD на момент здійснення переказу. <1/> <1/> З детальною інформацією можна ознайомитися <2>тут</2>."
+        "title": "How do I cashout tJOY to USD?",
+        "text": "We use Bitcoin Cash (BCH) as a payment rail on our testnets. You can cashout tJOY by making a transfer to the dedicated burn address: <0>5D5PhZQNJzcJXVBxwJxZcsutjKPqUPydrvpu6HeiBfMaeKQu</0> Before doing this, you should set the <0>memo</0> of the key from which the transfer is made to your BCH address. At the moment of the transfer, the BCH to USD exchange rate is locked. <1/><1/>More information on payouts can be found <2>here</2>."
       },
       "howToEarn": {
-        "title": "Як можна заробити токени основної мережі JOY?",
-        "text": "В даний час єдиний спосіб забезпечити розподіл JOY в основній мережі - це якісний вклад в платформу і співтовариство через нашу <0>Програму для членів-засновників</0>."
+        "title": "How can I earn mainnet JOY?",
+        "text": "Currently, the only way to secure an allocation of mainnet JOY is through high-quality contributions to the platform and community via our <0>Founding Member Program</0>."
       },
       "TJoyWorth": {
-        "title": "Скільки коштує tJOY?",
-        "text": "Курс обміну (tJOY->USD) можна побачити на цій сторінці (див. вище)."
+        "title": "How much is tJOY worth?",
+        "text": "You can check the live exchange rate (tJOY->USD) on this page (see above)."
       }
     },
     "cashouts": {
-      "title": "Очікувані виплати",
-      "subtitle": "Токени, відправлені в Jsgenesis на обмін, будуть утилізовані, тому що кінцева вартість токенов повинна залишитися незмінною при такому обміні.",
+      "title": "Pending cashouts",
+      "subtitle": "Tokens sent to Jsgenesis in this exchange are burned, hence the final price of the token is unaffected by such an exchange.",
       "cashout": {
-        "address": "Адреса відправника",
-        "tokensTransferred": "Відправлені токени",
-        "usdValue": "USD",
-        "blockNumber": "Номер блоку",
-        "exchangeNumber": "Обмін №"
+        "address": "Source address",
+        "tokensTransferred": "Tokens transferred",
+        "usdValue": "USD Value",
+        "blockNumber": "Block Number",
+        "exchangeNumber": "Exchange #"
       }
     },
     "cta": {
-      "title": "Приєднуйся до нашого Discord і зміни індустрію відео сервісів"
+      "title": "Join our Discord and change the online video industry"
     }
   }
 }
