--- a/src/locales/ua/athens.json
+++ b/src/locales/ua/athens.json
@@ -1,59 +1,59 @@
 {
   "athens": {
     "siteMetadata": {
-      "description": "Вивчаємо тестнет Athens"
+      "description": "Explore the Athens testnet"
     },
     "hero": {
-      "title": "Мережа Athens",
-      "text": "Вивчіть доступні варіанти участі та оберіть той, який вам найбільше підходить. Впливайте на розвиток платформи та заробляйте  при цьому реальні гроші.",
-      "chipText": "Що це?"
+      "title": "Athens Network",
+      "text": "Explore available roles and pick the one that suits you best. Influence the platform's development and earn real money in the process.",
+      "chipText": "What is this?"
     },
     "heroCard": {
-      "text": "ПІСЛЯ ЗАПУСКУ 17 / 04 / 19 <0/> МЕРЕЖА БУЛА ОНОВЛЕНА ДО <1>ACROPOLIS</1> "
+      "text": "AFTER LAUNCHING 17 / 04 / 19 <0/> THE NETWORK WAS UPGRADED TO <1>ACROPOLIS</1> ON"
     },
     "modal": {
-      "title": "Сова Афіни",
-      "text": "<0>В грецькій міфології маленька сова (Athene noctua) </0> традиційно представляє чи супроводжує Афіну, цнотливу богиню мудрості. Через цю асоціації птах, якого часто називають \"совою Афіни\", використовувалася як символ знання, мудрості, проникливості і ерудиції в усьому західному світі."
+      "title": "Owl of Athena",
+      "text": "<0>In Greek mythology, a little owl (Athene noctua)</0> traditionally represents or accompanies Athena, the virgin goddess of wisdom. Because of such association, the bird — often referred to as the \"owl of Athena\" — has been used as a symbol of knowledge, wisdom, perspicacity and erudition throughout the Western world."
     },
     "criticalDocuments": {
-      "title": "Важлива документація",
+      "title": "Critical Documents",
       "fullSpecifications": {
-        "title": "Повні характеристики",
-        "text": "Характеристики не були опубліковані для тестнету Athens."
+        "title": "Full Specifications",
+        "text": "No specifications was published for Athens."
       },
       "releasePlan": {
-        "title": "Реліз план",
-        "text": "Читай реліз план в тому вигляді, якому він був створений під час планування та дізнавайся, як відбувалась розробка."
+        "title": "Release Plan",
+        "text": "Read the release plan as it was made during the planning stage, and learn more about how the development evolved."
       }
     },
     "testnetGoals": {
-      "title": "Цілі тестнету",
-      "subtitle": "Цілі, викладені нижче - є спрощеним переліком основних результатів нашого релізу <0>OKR</0>",
+      "title": "Testnet Goals",
+      "subtitle": "The goals below are a simplified representation of the Key Results listed in our Release <0>OKR</0>",
       "goals": {
         "media": {
-          "title": "Включення медіа функцій в платформу",
-          "text": "В якості \"медіа-платформи, керованої користувачами\", додати дозвіл користувачам завантажувати та отримувати контент було для нас головною метою."
+          "title": "Enable media on the platform",
+          "text": "As a \"user governed media platform\", allowing users to upload and consume and content was a major goal for us."
         },
         "memberships": {
-          "title": "Презентація членства в платформі",
-          "text": "Незважаючи на те, що ми будуємо відкритий ланцюг блоків (blockchain) в тому сенсі, що користувачі можуть вільно відправляти токении на свій розсуд, ідея Joystream полягає у тому, щоб користувачі платформи володіли та керували платформою. Ми не знаємо, які саме частини платформи будуть доступні для учасників, деякі дії потребують додаткового рівня перевірки та звітності."
+          "title": "Introduce platform memberships",
+          "text": "Although we are building an open blockchain in the sense that users are free to send tokens as they like, the Joystream experience is about having the platform users own, operate and govern the platform. We are agnostic on exactly what parts of the platform will be reserved for members, some actions will require and extra level of screening and accountability."
         },
         "storageNode": {
-          "title": "Побудова та публікація вузла зберігання",
-          "text": "Незважаючи на те, що вузол зберігання був побудований та використовувався для розміщення та поширення контенту платформи, у ньому були деякі помилки, через які він не міг синхронізуватись між клієнтами та вимагав жорстко запрограмованих зв'язків."
+          "title": "Build and release the storage node",
+          "text": "Although a storage node was built and used to host and distribute the platform content, it had some bugs making it unable to sync between clients and required a hardcoded liaison."
         },
         "runtimeUpgrade": {
-          "title": "Оновлення середовища виконання за допомогою голосування Ради",
-          "text": "Намір Jsgenesis полягало в тому, щоб створити пропозицію по <0>оновленню середовища виконання</0> та проголосувати за нього у Раді. Якщо Рада досягне кворуму, узгоджені правила системи будуть автоматично оновлюватися в процесі. На жаль, <1>мережа Sparta зазнала краху</1> до того, як ми досягли цієї стадії, і Athenes ми були вимушені почати як нову мережу з новим генезисним блоком(genesis block)."
+          "title": "Upgrade the runtime through a Council vote",
+          "text": "The intention was for Jsgenesis to create a proposal for a <0>runtime upgrade</0> and have the Council vote on it. If the Council reached quorum, the consensus rules of the system would automatically get upgraded in flight. Unfortunately, the <1>Sparta network crashed</1> before we reached this stage, and had to start Athens as a new chain with a new genesis block."
         }
       }
     },
     "roles": {
-      "title": "Спонсоровані ролі в мережі Athens"
+      "title": "Roles available on the Athens testnet"
     },
     "map": {
-      "title": "Афіни, місто",
-      "text": "<0>Афіни - столиця Греції.</0> Воно також було центром Стародавньої Греції, могутньої цивілізації та імперії. У місті як і раніше переважають пам'ятки V століття до н.е, в тому числі Акрополь, цитадель на вершині пагорба, увінчана стародавніми будівлями, такими як храм Парфенон з колонами. <1/><1/> Ми обрали назву Афіни, оскільки, як і наші попередні тестнети, Mesopotamia та Sparta, історичне значення стародавніх Афін полягає в розвитку сучасної демократії та верховенстві закону. <1/><1/> <2> <0/> Вивчити минулий тестнет</2>"
+      "title": "The city of Athens",
+      "text": "<0>Athens is the capital of Greece.</0> It was also at the heart of Ancient Greece, a powerful civilisation and empire. The city is still dominated by 5th-century BC landmarks, including the Acropolis, a hilltop citadel topped with ancient buildings like the colonnaded Parthenon temple. <1/><1/> We chose the name Athens as, like our previous testnets, Mesopotamia and Sparta, the ancient Athens' historical significance in the development towards modern democracy and the rule of law. <1/><1/> <2> <0/> Explore previous testnet</2>"
     }
   }
 }
