--- a/src/locales/ua/general.json
+++ b/src/locales/ua/general.json
@@ -2,37 +2,37 @@
   "joystream": "Joystream",
   "button": {
     "getStarted": {
-      "text": "Почни заробляти",
-      "altText": "Приєднуйся та заробляй"
+      "text": "Start earning",
+      "altText": "Join & start earning"
     },
-    "download": "Завантажити",
-    "close": "Закрити",
-    "accept": "Підтвердити",
-    "openDiscord": "Відкрити Discord",
-    "learnMore": "Докладніше",
-    "gettingStarted": "Почати"
+    "download": "Download",
+    "close": "Close",
+    "accept": "Accept",
+    "openDiscord": "Open Discord",
+    "learnMore": "Learn More",
+    "gettingStarted": "Getting Started"
   },
   "rolesData": {
-    "validator": "Валідатор",
-    "council": "Рада",
-    "councilMember": "Член Ради",
-    "storageProvider": "Провайдер Сховища",
-    "contentCreator": "Творець Контенту",
-    "contentCurator": "Контент Куратор",
-    "discoveryProvider": "Діскавері Провайдер",
-    "bandwidthProvider": "Провайдер пропускної здатності",
-    "builder": "Будівельник",
-    "storageLead" : "Головний Хранитель",
-    "contentLead" : "Головний з Контенту"
+    "validator": "Validator",
+    "council": "Council",
+    "councilMember": "Council Member",
+    "storageProvider": "Storage Provider",
+    "contentCreator": "Content Creator",
+    "contentCurator": "Content Curator",
+    "discoveryProvider": "Discovery Provider",
+    "bandwidthProvider": "Bandwidth Provider",
+    "builder": "Builder",
+    "storageLead" : "Storage Lead",
+    "contentLead" : "Content Lead"
   },
   "siteMetadata": {
-    "title": "Joystream: відео платформаDAO"
+    "title": "Joystream: The video platform DAO"
   },
   "colors": {
     "joystreamBlue": "Joystream Blue",
-    "white": "Білий",
-    "joystreamGrey": "Joystream Gray",
-    "black": "Чорний"
+    "white": "White",
+    "joystreamGrey": "Joystream Grey",
+    "black": "Black"
   },
   "CMYK": "CMYK",
   "RGB": "RGB",
@@ -51,77 +51,77 @@
     "seven": "7"
   },
   "roleCard": {
-    "migration": "Під час міграції, {{numberOfUsers}} (max) мали цю роль",
-    "current": "{{numberOfUsers}} виконували цю роль у Antioch",
-    "most": "Максимум, {{numberOfUsers}} користувачів виконували цю роль",
+    "migration": "At migration, {{numberOfUsers}} (max) had this role",
+    "current": "{{numberOfUsers}} run this role on Antioch",
+    "most": "At most, {{numberOfUsers}} users occupied this role",
     "new": "NEW"
   },
   "heroCard": {
-    "active": "Мережа анонсована",
-    "error": "Мережа вимкнена",
-    "info": "Мережа замінена",
-    "finished": "Мережа активна"
+    "active": "Network announced",
+    "error": "Network down",
+    "info": "Network replaced",
+    "finished": "Network live"
   },
   "dateCounter": {
-    "week": "тиждень",
-    "weeks": "тижнів",
-    "day": "день",
-    "days": "днів",
-    "hour": "година",
-    "hours": "годин",
-    "minute": "хвилина",
-    "minutes": "хвилин",
-    "second": "секунда",
-    "seconds": "секунд",
-    "month": "місяць",
-    "months": "місяців",
-    "year": "рік",
-    "years": "років",
-    "timeToLaunch": "Час до запуску",
-    "launchedOn": "Запущено"
+    "week": "week",
+    "weeks": "weeks",
+    "day": "day",
+    "days": "days",
+    "hour": "hour",
+    "hours": "hours",
+    "minute": "minute",
+    "minutes": "minutes",
+    "second": "second",
+    "seconds": "seconds",
+    "month": "month",
+    "months": "months",
+    "year": "year",
+    "years": "years",
+    "timeToLaunch": "Time to launch",
+    "launchedOn": "Launched on"
   },
   "sidebar": {
-    "activeRoles": "Активні ролі",
-    "upcomingRoles": "Майбутні ролі",
-    "viewAllRoles": "Перегляд всіх ролей"
+    "activeRoles": "Active roles",
+    "upcomingRoles": "Upcoming roles",
+    "viewAllRoles": "View all Roles"
   },
   "navbar": {
-    "product": "Продукт",
+    "product": "Product",
     "atlas": "Atlas",
     "pioneer": "Pioneer",
-    "community": "Спільнота",
-    "brandStory": "Історія Бренду",
-    "brandGuides": "Бренд путівник",
-    "downloadAssets": "Завантажити ресурси",
-    "about": "Про Нас"
+    "community": "Community",
+    "brandStory": "Brand Story",
+    "brandGuides": "Brand Guides",
+    "downloadAssets": "Download Assets",
+    "about": "About"
   },
   "footer": {
-    "title": "Слідкуй за новинами",
-    "alternateTitle": "Отримуй сповіщення",
-    "subtitle": "Не турбуйся про спам! Отримуй важливі повідомлення про оновлення",
-    "inputPlaceholder": "Email адреса...",
-    "joinNewsletter": "Підписка на розсилку",
+    "title": "Stay up to date",
+    "alternateTitle": "Get notified",
+    "subtitle": "Don't worry about spam! Keep track of all important updates",
+    "inputPlaceholder": "Email Address...",
+    "joinNewsletter": "Join the newsletter",
     "github": {
-      "whitepaper": "Розсилка",
-      "repository": "Репозиторій"
+      "whitepaper": "Whitepaper",
+      "repository": "Repository"
     },
     "usefulLinks": {
-      "title": "Корисні посилання",
-      "hiring": "Відкриті вакансії!",
-      "brandGuidance": "Бренд путівник"
+      "title": "Useful links",
+      "hiring": "We are hiring!",
+      "brandGuidance": "Brand guidance"
     },
-    "followUs": "Стеж за нами"
+    "followUs": "Follow us"
   },
   "pages": {
-    "blog": "Блог",
-    "manifesto": "Маніфест",
-    "roles": "Ролі",
-    "token": "Токени",
+    "blog": "Blog",
+    "manifesto": "Manifesto",
+    "roles": "Roles",
+    "token": "Token",
     "hydra": "Hydra",
-    "foundingMembers": "Засновники",
-    "leaderboards": "лідери",
-    "scoringForm": "Таблиця підрахунку очок",
-    "overview": "Огляд"
+    "foundingMembers": "Founding Members",
+    "leaderboards": "Leaderboards",
+    "scoringForm": "Scoring form",
+    "overview": "Overview"
   },
   "socials": {
     "twitter": "Twitter",
@@ -129,7 +129,7 @@
     "discord": "Discord"
   },
   "cookiesNotice": {
-    "text": "Цей сайт використовує файли cookie. Продовжуючи переглядати сайт, ви погоджуєтеся на використання файлів cookie.",
-    "findOutMore": "Дізнатись більше ›"
+    "text": "This site uses cookies. By continuing to browse the site, you are agreeing to our use of cookies.",
+    "findOutMore": "Find out more ›"
   }
 }
